[gd_scene load_steps=14 format=3 uid="uid://dpu8nu6q74ly7"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b3ipvwnyq0u3u" path="res://thirdparty/material-symbols/volume_up_white_24dp.svg" id="2_53cpx"]
[ext_resource type="Texture2D" uid="uid://o168q5o474la" path="res://thirdparty/material-symbols/play_arrow_white_24dp.svg" id="2_j8lr5"]
[ext_resource type="Texture2D" uid="uid://clcdd2j1h6pl5" path="res://thirdparty/material-symbols/skip_previous_white_24dp.svg" id="3_xm7v2"]
[ext_resource type="Texture2D" uid="uid://cccdebu817tew" path="res://thirdparty/material-symbols/fast_rewind_white_24dp.svg" id="4_25epy"]
[ext_resource type="Texture2D" uid="uid://d0j5b4nof5dxe" path="res://thirdparty/material-symbols/fast_forward_white_24dp.svg" id="5_2hvm6"]
[ext_resource type="Texture2D" uid="uid://w4kif1jg7pai" path="res://thirdparty/material-symbols/skip_next_white_24dp.svg" id="6_himey"]
[ext_resource type="Texture2D" uid="uid://2u530mgol604" path="res://thirdparty/material-symbols/zoom_in_white_24dp.svg" id="7_vlwp1"]
[ext_resource type="Texture2D" uid="uid://cxf7q3spympe6" path="res://thirdparty/material-symbols/zoom_out_white_24dp.svg" id="8_mcqtf"]
[ext_resource type="Texture2D" uid="uid://crbjuycrseg55" path="res://thirdparty/material-symbols/unfold_more_FILL0_wght200_GRAD0_opsz24.svg" id="10_de6no"]

[sub_resource type="ButtonGroup" id="ButtonGroup_ibq7x"]

[sub_resource type="ButtonGroup" id="ButtonGroup_s4ghw"]

[sub_resource type="Theme" id="Theme_sllqa"]
SpinBox/icons/updown = ExtResource("10_de6no")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -384.0
offset_right = -384.0
offset_bottom = -384.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(512, 512)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.466667)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.5
offset_top = -178.5
offset_right = 188.5
offset_bottom = 178.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Load File..."

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Projection"

[node name="ProjectionOptions" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="ProjectionFlat" type="CheckBox" parent="VBoxContainer/GridContainer/ProjectionOptions"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_ibq7x")
text = "Flat"

[node name="Projection180" type="CheckBox" parent="VBoxContainer/GridContainer/ProjectionOptions"]
layout_mode = 2
button_group = SubResource("ButtonGroup_ibq7x")
text = "180°"

[node name="Projection360" type="CheckBox" parent="VBoxContainer/GridContainer/ProjectionOptions"]
layout_mode = 2
button_group = SubResource("ButtonGroup_ibq7x")
text = "360°"

[node name="Projection360EAC" type="CheckBox" parent="VBoxContainer/GridContainer/ProjectionOptions"]
layout_mode = 2
button_group = SubResource("ButtonGroup_ibq7x")
text = "360° EAC"

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Vision"

[node name="StereoOptions" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Mono" type="CheckBox" parent="VBoxContainer/GridContainer/StereoOptions"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_s4ghw")
text = "Mono"

[node name="Stereo" type="CheckBox" parent="VBoxContainer/GridContainer/StereoOptions"]
layout_mode = 2
button_group = SubResource("ButtonGroup_s4ghw")
text = "Stereo"

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Swap eyes"

[node name="SwapEyesCheckButton" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Loop"

[node name="LoopCheckButton" type="CheckButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_j8lr5")

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="PrevButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_xm7v2")

[node name="SkipBackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_25epy")

[node name="Skip_forwardButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_2hvm6")

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("6_himey")

[node name="VSeparator2" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2

[node name="ZoomInButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("7_vlwp1")

[node name="ZoomOutButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("8_mcqtf")

[node name="ProgressSlider" type="HSlider" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 32)
layout_mode = 2
max_value = 1000.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Time: "

[node name="ProgressLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0/ 0"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
visible = false
layout_mode = 2
text = "Volume: "

[node name="VolumeIcon" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource("2_53cpx")

[node name="VolumeSlider" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(150, 24)
layout_mode = 2
theme = SubResource("Theme_sllqa")
min_value = -999.0
max_value = 99.0
alignment = 1
suffix = "dB"
custom_arrow_step = 3.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RecenterButton" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Recenter View"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 0
text = "Exit"

[node name="FileDialog" type="FileDialog" parent="."]
handle_input_locally = false
mode = 3
title = "Load Video..."
initial_position = 1
size = Vector2i(704, 704)
exclusive = false
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.avi, *.flv, *.h264, *.m4v, *.mkv, *.mod, *.mov, *.mp4, *.mpeg, *.mpg, *.ogv, *.webm, *.wmv; Video Files", "*.png, *.bmp, *.tga, *.webp, *.jpg, *.jpeg, *.mpo; Image Files")

[node name="ExitDialog" type="ConfirmationDialog" parent="."]
handle_input_locally = false
mode = 3
initial_position = 1
size = Vector2i(252, 100)
dialog_text = "Are you sure you want to quit?"

[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ProjectionOptions/ProjectionFlat" to="." method="_on_projection_flat_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ProjectionOptions/Projection180" to="." method="_on_projection_180_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ProjectionOptions/Projection360" to="." method="_on_projection_360_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ProjectionOptions/Projection360EAC" to="." method="_on_projection_360eac_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/StereoOptions/Mono" to="." method="_on_mono_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/StereoOptions/Stereo" to="." method="_on_stereo_pressed"]
[connection signal="toggled" from="VBoxContainer/GridContainer/SwapEyesCheckButton" to="." method="_on_SwapEyesCheckButton_toggled"]
[connection signal="toggled" from="VBoxContainer/GridContainer/LoopCheckButton" to="." method="_on_LoopCheckButton_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SkipBackButton" to="." method="_on_SkipBackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Skip_forwardButton" to="." method="_on_Skip_forwardButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ZoomInButton" to="." method="_on_ZoomInButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ZoomOutButton" to="." method="_on_ZoomOutButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/ProgressSlider" to="." method="_on_ProgressSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/VolumeIcon" to="." method="_on_volume_icon_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/RecenterButton" to="." method="_on_RecenterButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="confirmed" from="ExitDialog" to="." method="_on_ExitDialog_confirmed"]
